--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,18 @@
 		}
 	},
 
+	"autoload-dev": {
+		"psr-4": {
+			"NeoParla\\DbEscaper\\Test\\": "test/"
+		}
+	},
+
 	"require": {
+		"php": ">=5.3",
 		"ext-mysqli": "*"
+	},
+
+	"require-dev": {
+		"phpunit/phpunit": "~4.3"
 	}
 }
