--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,18 @@
 language: php
 
 php:
-  - 5.3
   - 5.4
   - 5.5
   - 5.6
   - 7.0
 
+matrix:
+  include:
+    - php: "5.3"
+      dist: precise
+
 before_script:
-  - composer install --dev
+  - composer install --prefer-dist -o
 
 script:
   - vendor/bin/phpunit
